--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,12 +4,12 @@ backend:
 media_folder: "public/assets/images"
 public_folder: "/assets/images"
 collections:
-  - name: "project" # Used in routes, e.g., /admin/collections/blog
-    label: "Project" # Used in the UI
-    folder: "src/projects" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
+  - name: "project" 
+    label: "Project"
+    folder: "src/projects" 
+    create: true 
+    slug: "{{year}}-{{month}}-{{slug}}" 
+    fields: 
      - { label: "Title", name: "title", widget: "string" }
      - { label: "Date", name: "date", widget: "datetime" }
      - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
