--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -12,7 +12,7 @@ collections:
     fields: 
      - { label: "Title", name: "title", widget: "string" }
      - { label: "Date", name: "date", widget: "datetime" }
-     - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
+     - { label: "Tags", name: "tags", widget: "select", multiple: true, options: ["project, featured"], default: ["project"] }
      - { label: "Featured Image", name: "image", widget: "image" }
      - { label: "Image caption", name: "imageAlt", widget: "string" }
      - { label: "Summary", name: "summary", widget: "string" }
