updated config file to update about page in Netlify CMS

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -18,3 +18,46 @@ collections:
      - { label: "Summary", name: "summary", widget: "string" }
      - { label: "Page Meta Description", name: "metaDescription", widget: "string" }
      - { label: "Body", name: "body", widget: "markdown"}
+  - name : "about"
+    label: "About"
+    folder: "src/about"
+    create: false
+    delete: false
+    slug: "{{ title }}"
+    fields: 
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Summary", name: "summary", widget: "string" }
+      - { label: "Landing Image", name: "landingImage", widget: "image" }
+      - { label: "Landing image desciption", name: "landingImageAlt", widget: "string" }
+      - { label: "Page meta description", name: "metaDescription", widget: "string" }
+      - label: "Personal Links" 
+        name: "links" 
+        widget: "object"
+        extension: "json"
+        create: true
+        collapsed: true
+        fields: 
+          - { label: "Name", name: "linkName", widget: "string" }
+          - { label: "url", name: "url", widget: "string" }
+      - label: "Skills"
+        name: "skills"
+        widget: "object"
+        extension: "json"
+        create: true
+        collapsed: true
+        fields: 
+          - { label: "Name", name: "name", widget: "string" }
+          - { label: "Image", name: "image", widget: "image" }
+          - { label: "Image description", name: "imageAlt", widget: "string" }
+      - label : "Interests"
+        name: "interests"
+        widget: "list"
+        extension: "json"
+        allow_add: true
+        create: true
+        collapsed: true
+      - label: "Interests Image"
+        name: "interestsImage"
+        collapsed: true
+        widget: image
+      - { label: "Body", name: "body", widget: "markdown"}
