fixed widget value for interestsImage, it was not in quotations

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -57,5 +57,5 @@ collections:
       - label: "Interests Image"
         name: "interestsImage"
         collapsed: true
-        widget: image
+        widget: "image"
       - { label: "Body", name: "body", widget: "markdown"}
