cms added for work page

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -69,4 +69,13 @@ collections:
     slug: "{{ title }}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Page Meta Desciption", name: "metaDescription", widget: "string"}
+      - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
+  - name: "work"
+    label: "Work"
+    folder: "src/work"
+    create: false
+    delete: false
+    slug: "{{ title }}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
