format option added to contact page, lets see if this works

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -64,6 +64,7 @@ collections:
   - name: "contact"
     label: "Contact Page"
     folder: "src/contact"
+    format: "frontmatter"
     create: false
     delete: false
     slug: "{{ title }}"
