trying to specifiy directly for contact page using extension and specific folder

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -63,7 +63,8 @@ collections:
       - { label: "Body", name: "body", widget: "markdown"}
   - name: "contact"
     label: "Contact Page"
-    folder: "src/contact"
+    folder: "src/contact/"
+    extension: "html"
     format: "frontmatter"
     create: false
     delete: false
