trying another method for cms customization for contact page

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -64,6 +64,8 @@ collections:
   - name: "contact"
     label: "Contact Page"
     folder: "src/contact"
+    extension: "html"
+    format: "json"
     create: false
     delete: false
     slug: "{{ title }}"
