pages with customizable fields updated to be .md

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -79,7 +79,7 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
-  - name: "src"
+  - name: "index"
     label: "Home Page"
     folder: "src"
     create: false
