--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -28,7 +28,7 @@ collections:
     files:
       - label: "Home Page"
         name: "index"
-        file: "public/index.json"
+        file: "src/index.json"
         fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
@@ -36,13 +36,13 @@ collections:
           - { label: "Summary", name: "summary", widget: "string" }
       - label: "Work Page"
         name: "work"
-        file: "public/work/work.json"
+        file: "src/work/work.json"
         fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
       - label: "About Page"
         name: "about"
-        file: "public/about/about.json"
+        file: "src/about/about.json"
         fields: 
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Summary", name: "summary", widget: "string" }
@@ -77,7 +77,7 @@ collections:
           - { label: "Body", name: "body", widget: "markdown"}
       - label: "Contact Page"
         name: "contact"
-        file: "public/contact/contact.json"
+        file: "src/contact/contact.json"
         fields: 
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Page meta description", name: "metaDescription", widget: "string" }
