--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -3,12 +3,14 @@ backend:
   branch: master
 media_folder: "public/assets/images"
 public_folder: "/assets/images"
+publish_mode: editorial_workflow
 collections:
   - label: "Projects" 
     name: "project"
     folder: "src/projects" 
     create: true 
-    slug: "{{year}}-{{month}}-{{slug}}" 
+    slug: "{{year}}-{{month}}-{{slug}}"
+    preview_path: projects/{{slug}}
     fields: 
      - { label: "Title", name: "title", widget: "string" }
      - { label: "Date", name: "date", widget: "datetime" }
@@ -29,6 +31,7 @@ collections:
       - label: "Home Page"
         name: "index"
         file: "src/index.json"
+        preview_path: src/
         editor:
           preview: false
         fields:
@@ -47,6 +50,7 @@ collections:
       - label: "About Page"
         name: "about"
         file: "src/about/about.json"
+        preview_path: src/about/
         fields: 
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Summary", name: "summary", widget: "string" }
@@ -90,6 +94,7 @@ collections:
       - label: "Footer"
         name: "base"
         file: "src/_data/global.json"
+        preview_path: src/
         editor:
           preview: false
         fields: 
