--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -101,7 +101,7 @@ collections:
           - label: "Social Links" 
             name: "socialLinks" 
             widget: "list"
-            collapsed: false
+            collapsed: true
             fields: 
               - { label: "Name", name: "name", widget: "string" }
               - { label: "Url", name: "url", widget: "string" }
