--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -90,8 +90,18 @@ collections:
         fields: 
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Page meta description", name: "metaDescription", widget: "string" }
+  - label: "General"
+    name: "general"
+    files:
+      - label: "Header"
+        name: "header"
+        file: "src/_data/global.json"
+        editor:
+          preview: false
+        fields:
+          - { label: "Logo", name: "logo", widget: "image", choose_url: false, comment: "Use .svg files for your logos." }
       - label: "Footer"
-        name: "base"
+        name: "footer"
         file: "src/_data/global.json"
         editor:
           preview: false
