--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -46,6 +46,12 @@ collections:
         fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
+          - label: "Pagination"
+            name: "pagination"
+            widget: "object"
+            fields:
+              - { label: "Size", name: "size", widget: "number", value_type: "int" }
+              - { label: "Reverse Order", name: "reverse", widget: "boolean", default: true }
       - label: "About Page"
         name: "about"
         file: "src/about/about.json"
@@ -93,19 +99,13 @@ collections:
   - label: "General"
     name: "general"
     files:
-      # - label: "Header"
-      #   name: "header"
-      #   file: "src/_data/global.json"
-      #   editor:
-      #     preview: false
-      #   fields:
-      #     - { label: "Logo", name: "logo", widget: "image", choose_url: false, comment: "Use .svg files for your logos." }
-      - label: "Footer"
-        name: "footer"
+      - label: "Header & Footer"
+        name: "headerFooter"
         file: "src/_data/global.json"
         editor:
           preview: false
-        fields: 
+        fields:
+          - { label: "Logo", name: "logo", widget: "image", collapsed: true }
           - label: "Social Links" 
             name: "socialLinks" 
             widget: "list"
