--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -93,19 +93,13 @@ collections:
   - label: "General"
     name: "general"
     files:
-      # - label: "Header"
-      #   name: "header"
-      #   file: "src/_data/global.json"
-      #   editor:
-      #     preview: false
-      #   fields:
-      #     - { label: "Logo", name: "logo", widget: "image", choose_url: false, comment: "Use .svg files for your logos." }
-      - label: "Footer"
-        name: "footer"
+      - label: "Header & Footer"
+        name: "headerFooter"
         file: "src/_data/global.json"
         editor:
           preview: false
-        fields: 
+        fields:
+          - { label: "Logo", name: "logo", widget: "image", collapsed: true }
           - label: "Social Links" 
             name: "socialLinks" 
             widget: "list"
