--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -20,7 +20,7 @@ collections:
        multiple: true
        options: ["project", "featured"]
        default: ["project"]
-     - { label: "Featured Image", name: "image", widget: "image" }
+     - { label: "Thumbnail Image", name: "image", widget: "image" }
      - { label: "Image caption", name: "imageAlt", widget: "string" }
      - { label: "Summary", name: "summary", widget: "string" }
      - { label: "Page Meta Description", name: "metaDescription", widget: "string" }
@@ -37,8 +37,8 @@ collections:
         fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
-          - { label: "Introduction", name: "intro", widget: "string" }
-          - { label: "Summary", name: "summary", widget: "string" }
+          - { label: "Introduction", name: "intro", widget: "string", hint: "The first line a user see's when visiting the website." }
+          - { label: "Summary", name: "summary", widget: "string", hint: "Try keep it short but effective." }
       - label: "Work Page"
         name: "work"
         file: "src/work/work.json"
@@ -52,8 +52,8 @@ collections:
             name: "pagination"
             widget: "object"
             fields:
-              - { label: "Size", name: "size", widget: "number", value_type: "int" }
-              - { label: "Reverse Order", name: "reverse", widget: "boolean", default: true }
+              - { label: "Size", name: "size", required: false, widget: "number", value_type: "int", hint: "The amount of projects you want displayed at a time." }
+              - { label: "Reverse Order", required: false, name: "reverse", widget: "boolean", default: true, hint: "Reversing Order displays latest to oldest." }
       - label: "About Page"
         name: "about"
         file: "src/about/about.json"
@@ -61,15 +61,17 @@ collections:
         fields: 
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Summary", name: "summary", widget: "string" }
-          - { label: "Landing Image", name: "landingImage", widget: "image" }
+          - { label: "Landing Image", name: "landingImage", widget: "image", hint: "This image will be the landing image for about." }
           - { label: "Landing image desciption", name: "landingImageAlt", widget: "string" }
           - { label: "Page meta description", name: "metaDescription", widget: "string" }
           - label: "Links" 
             name: "links" 
             widget: "list"
             collapsed: true
+            hint: "Links to other places e.g. (LinkedIn, Behance, etc.)"
+            required: false
             fields: 
-              - { label: "Name", name: "linkName", widget: "string" }
+              - { label: "Name", name: "linkName", widget: "string", hint: "Name of the link you want displayed." }
               - { label: "url", name: "url", widget: "string" }
           - label: "Skills"
             name: "skills"
@@ -109,13 +111,14 @@ collections:
         editor:
           preview: false
         fields:
-          - { label: "Logo", name: "logo", widget: "image", collapsed: true }
+          - { label: "Logo", name: "logo", widget: "image", collapsed: true, hint: "The logo displayed in the navigation bar." }
           - label: "Social Links" 
             name: "socialLinks" 
             widget: "list"
             collapsed: true
+            hint: "Links displayed at the bottom of the footer under 'Follow Me'."
             fields: 
               - { label: "Name", name: "name", widget: "string" }
               - { label: "Url", name: "url", widget: "string" }
-              - { label: "Icon", name: "img", widget: "image" }
+              - { label: "Icon", name: "img", widget: "image", hint: "Using .svg files are best for icons." }
               - { label: "Icon Alt", name: "imgAlt", widget: "string" }
