site_url and logo_url added to help with cms UI

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,6 +4,8 @@ backend:
 media_folder: "public/assets/images"
 public_folder: "/assets/images"
 publish_mode: editorial_workflow
+site_url: https://11ty-portfolio-template.netlify.app/
+logo_url: site_url/assets/images/logoipsum-logo-1.svg
 collections:
   - label: "Projects" 
     name: "project"
